--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,28 @@ body {
     padding: 0;
     overflow: hidden;
 }
+
+
+:root {
+    --tp-base-background-color: hsla(230, 20%, 11%, 1);
+    --tp-base-shadow-color: hsla(0, 0%, 0%, 0.2);
+    --tp-button-background-color: hsla(230, 10%, 80%, 1.00);
+    --tp-button-background-color-active: hsla(230, 10%, 95%, 1);
+    --tp-button-background-color-focus: hsla(230, 10%, 90%, 1);
+    --tp-button-background-color-hover: hsla(230, 10%, 85%, 1);
+    --tp-button-foreground-color: hsla(230, 20%, 11%, 1.00);
+    --tp-container-background-color: hsla(230, 25%, 16%, 1.00);
+    --tp-container-background-color-active: rgb(59, 66, 99);
+    --tp-container-background-color-focus: hsla(230, 25%, 26%, 1.00);
+    --tp-container-background-color-hover: hsla(230, 25%, 21%, 1.00);
+    --tp-container-foreground-color: hsla(230, 10%, 80%, 1.00);
+    --tp-groove-foreground-color: hsla(230, 20%, 8%, 1.00);
+    --tp-input-background-color: hsla(230, 20%, 8%, 1.00);
+    --tp-input-background-color-active: hsla(230, 28%, 23%, 1.00);
+    --tp-input-background-color-focus: hsla(230, 28%, 18%, 1.00);
+    --tp-input-background-color-hover: hsla(230, 20%, 13%, 1.00);
+    --tp-input-foreground-color: hsla(230, 0%, 100%, 1.00);
+    --tp-label-foreground-color: hsla(230, 0%, 82%, 1.00);
+    --tp-monitor-background-color: hsla(230, 20%, 8%, 1);
+    --tp-monitor-foreground-color: rgb(255, 255, 255);
+}
